support httpclient 4 and 5